--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Fonte principal */
 body {
   font-family: 'Inter', sans-serif;
   margin: 0;
@@ -103,6 +102,11 @@ section h2 {
 
 .card a:hover {
   text-decoration: underline;
+}
+
+.card img {
+  margin-top: 10px;
+  margin-right: 5px;
 }
 
 footer {
